tests/pass/matching/same order for binders.mmu
(sort s)
(term a ((x s ()) (y s ())) (s ()))
