tests/fail/registering/formula without provable sort.mmu
(sort s     ) 
(term a () (s ())) 
 (def b (  ) ( s () ) (  ) a ) 
